[package]
name = "airtable-proxy"
version = "0.1.0"
authors = ["Stan Rozenraukh <stan@stanistan.com>"]
edition = "2018"

[dependencies]
num-format = "0.4.0"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
url = "2.1.1"
warp = "0.2"
