[package]
name = "airtable-proxy"
version = "0.1.0"
authors = ["Stan Rozenraukh <stan@stanistan.com>"]
edition = "2018"

[dependencies]
anyhow = "1.0"
log = "0.4"
pretty_env_logger = "0.4"
reqwest = { version = "0.10", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tokio = { version = "0.2", features = ["full"] }
thiserror = "1.0"
url = "2.1.1"
warp = "0.2"
